# OpenGL-CLion-Template

./: CMakeLists.txt  LICENSE  README.md
Source/: main.cpp  window.h
